--- a/package.json
+++ b/package.json
@@ -27,8 +27,8 @@
     "build": "react-scripts build",
     "test": "react-scripts test",
     "eject": "react-scripts eject",
-    "predeploy": "yarn build",
-    "deploy": "echo 'hello.cjaewon.com' > dist/CNAME &&  gh-pages -b master -d build"
+    "predeploy": "yarn build && echo 'hello.cjaewon.com' > build/CNAME ",
+    "deploy": "gh-pages -b master -d build"
   },
   "eslintConfig": {
     "extends": "react-app"
